--- a/kuber-manifests/ingress.yaml
+++ b/kuber-manifests/ingress.yaml
@@ -8,10 +8,10 @@ spec:
     - host: arch.homework
       http:
         paths:
-          - path: /hello
+          - path: /
             pathType: Prefix
             backend:
               service:
                 name: kolybelkin-app-service
                 port:
-                  name: web
+                  number: 80
