--- a/kuber-manifests/ingress.yaml
+++ b/kuber-manifests/ingress.yaml
@@ -3,12 +3,14 @@ kind: Ingress
 metadata:
   name: minimal-ingress
   namespace: kolybelkin
+  annotations:
+    nginx.ingress.kubernetes.io/rewrite-target: /$1
 spec:
   rules:
     - host: arch.homework
       http:
         paths:
-          - path: /
+          - path: /otusapp/kolybelkin/(.*)
             pathType: Prefix
             backend:
               service:
