--- a/kuber-manifests/deployment.yaml
+++ b/kuber-manifests/deployment.yaml
@@ -19,14 +19,14 @@ spec:
           ports:
             - name: web
               containerPort: 8080
-#          readinessProbe:
-#            tcpSocket:
-#              port: 8080
-#            initialDelaySeconds: 5
-#            periodSeconds: 10
-#          livenessProbe:
-#            httpGet:
-#              path: /health
-#              port: 8080
-#            initialDelaySeconds: 3
-#            periodSeconds: 3
+          readinessProbe:
+            tcpSocket:
+              port: 8080
+            initialDelaySeconds: 5
+            periodSeconds: 10
+          livenessProbe:
+            httpGet:
+              path: /health
+              port: 8080
+            initialDelaySeconds: 10
+            periodSeconds: 3
